# nil

./: .editorconfig  .gitignore  Cargo.toml  README.md  clippy.toml  flake.nix  neovim-env.nix  shell.nix  typos.toml
.github/workflows/: ci.yaml  ci.yml  future-proof.yaml
crates/builtin/: Cargo.toml  build.rs
crates/builtin/src/: lib.rs
crates/ide/: Cargo.toml
crates/ide/src/: base.rs  diagnostic.rs  lib.rs  tests.rs  text_edit.rs
crates/ide/src/def/: kind.rs  liveness.rs  lower.rs  mod.rs  nameres.rs  path.rs  tests.rs
crates/ide/src/ide/: completion.rs  diagnostics.rs  expand_selection.rs  file_references.rs  goto_definition.rs  highlight_related.rs  hover.rs  inlay_hints.rs  links.rs  mod.rs  references.rs  rename.rs  symbol_hierarchy.rs  syntax_highlighting.rs
crates/ide/src/ide/assists/: add_to_inherit.rs  add_to_top_level_lambda_param.rs  convert_let_attrset.rs  convert_to_inherit.rs  flatten_attrset.rs  inline.rs  mod.rs  pack_bindings.rs  remove_empty_inherit.rs  remove_empty_let_in.rs  remove_unused_binding.rs  remove_unused_with.rs  rewrite_string.rs
crates/ide/src/ty/: convert.rs  display.rs  fmt.rs  infer.rs  known.rs  mod.rs  options.rs  tests.rs  union_find.rs
crates/nil/: Cargo.toml
crates/nil/src/: capabilities.rs  config.rs  convert.rs  handler.rs  lib.rs  lsp_ext.rs  main.rs  meter.rs  semantic_tokens.rs  server.rs  state.rs  vfs.rs
crates/nix-interop/: Cargo.toml
crates/nix-interop/src/: eval.rs  flake_lock.rs  flake_output.rs  info.rs  lib.rs  nixos_options.nix  nixos_options.rs  version.rs
crates/nix-interop/tests/nixpkgs_revs/: flake.nix
crates/nix-interop/tests/oom_flake/: flake.nix
crates/nix-interop/tests/test_flake/: flake.nix
crates/ssr/: Cargo.toml
crates/ssr/src/: lib.rs  tests.rs
crates/syntax/: .gitignore  Cargo.toml  cov.sh
crates/syntax/benches/: parse.rs
crates/syntax/fuzz/: README.md
crates/syntax/fuzz/fuzz_targets/: parser.rs
crates/syntax/src/: ast.rs  kind.rs  lexer.rs  lib.rs  parser.rs  semantic.rs  tests.rs
crates/syntax/test_data/parser/err/: broken-states.ast  empty.ast  incomplete-attrset.ast  incomplete-attrset.nix  incomplete-binding.ast  incomplete-binding.nix  incomplete-if.ast  incomplete-if.nix  incomplete-lambda.ast  incomplete-lambda.nix  incomplete-list.ast  incomplete-list.nix  incomplete-pat.ast  incomplete-pat.nix  incomplete-select.ast  incomplete-select.nix  invalid-or.ast  invalid-or.nix  invalid-rec.ast  lambda-middle-ellipsis.ast  let-as-binding.ast  let-as-binding.nix  multiple-or.ast  multiple-top-exprs.ast  no-assoc.ast  path-dot-slash.ast  path-dot-slash.nix  path-duplicated-slashes.ast  path-trailing-slash.ast  path-trailing-slash.nix  unterminated-indent-string.ast  unterminated-string.ast
crates/syntax/test_data/parser/fuzz/: 0001.ast  0002.ast  0002.nix  0003.ast
crates/syntax/test_data/parser/ok/: 0001-basic.nix  0002-expr-function.ast  0003-lambda.ast  0003-lambda.nix  0004-operator.nix  0005-select.nix  0007-binding.nix  0008-contextual-or.ast  0008-contextual-or.nix  0009-path.nix  0010-pipe.ast  0010-pipe.nix
dev/: flake.nix  neovim-lsp.nix  nix-ide-semantic-highlighting.patch  nvim-lsp.nix  pre-push.sh  vim-coc.nix  vim-lsp.nix  vimrc.vim  vscodium.nix
doc/: features.md
docs/: code_actions.md  configuration.md  features.md
editors/coc-nil/: .eslintrc.js  .npmignore  .prettierrc.json  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
editors/coc-nil/src/: lsp_ext.ts  main.ts
lsp/: Cargo.toml
lsp/src/: convert.rs  handler.rs  lib.rs  main.rs  state.rs  vfs.rs
src/: base.rs  builtin.rs  diagnostic.rs  ide.rs  lib.rs  source.rs  tests.rs
src/def/: liveness.rs  lower.rs  mod.rs  nameres.rs  path.rs  scope.rs  tests.rs
src/def/tests/: lower.rs  mod.rs  scope.rs
src/ide/: completion.rs  diagnostics.rs  goto_definition.rs  mod.rs  references.rs
syntax/: Cargo.toml
syntax/fuzz/: Cargo.toml
syntax/src/: ast.rs  kind.rs  lexer.rs  lib.rs  parser.rs  tests.rs
syntax/test_data/parser/err/: broken-states.ast  broken-states.nix  empty.ast  incomplete-attrset.ast  incomplete-attrset.nix  incomplete-lambda.ast  invalid-or.ast  invalid-rec.ast  invalid-rec.nix  lambda-middle-ellipsis.ast  lambda-middle-ellipsis.nix  multiple-or.ast  multiple-or.nix  multiple-top-exprs.ast  multiple-top-exprs.nix  no-assoc.ast  no-assoc.nix  path-duplicated-slashes.ast  path-duplicated-slashes.nix  path-trailing-slash.ast  unterminated-indent-string.ast  unterminated-indent-string.nix  unterminated-string.ast  unterminated-string.nix
syntax/test_data/parser/fuzz/: 0001.ast  0001.nix  0002.ast  0003.nix
syntax/test_data/parser/ok/: 0001-basic.ast  0002-expr-function.ast  0002-expr-function.nix  0003-lambda.ast  0003-lambda.nix  0004-operator.ast  0005-select.ast  0006-atom.ast  0006-atom.nix  0007-binding.ast  0008-contextual-or.ast  0008-contextual-or.nix  0009-path.ast
