[workspace]
resolver = "2"
members = [
    "crates/builtin",
    "crates/ide",
    "crates/nil",
    "crates/nix-interop",
    "crates/ssr",
    "crates/syntax",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
# Should be sync with CI.
rust-version = "1.68"

[profile.dev]
debug = 1

[profile.bench]
debug = 1

[profile.release]
lto = true
