[workspace]
resolver = "2"
members = [
    "crates/builtin",
    "crates/ide",
    "crates/nil",
    "crates/nix-interop",
    "crates/ssr",
    "crates/syntax",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
# Should be sync with CI and README.
rust-version = "1.77"

[profile.dev]
debug = 1

[profile.bench]
debug = 1

[workspace.lints.clippy]
dbg-macro = "warn"
todo = "warn"

doc-markdown = "warn"
manual-let-else = "warn"
semicolon-if-nothing-returned = "warn"
uninlined-format-args = "warn"

# WAIT: https://github.com/rust-lang/rust-clippy/issues/11436
missing-panics-doc = "allow"
