[package]
name = "lsp"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "nil"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.58"
crossbeam-channel = "0.5.6"
env_logger = "0.9.0"
indexmap = "1.9.1"
log = "0.4.17"
lsp-server = "0.6.0"
lsp-types = "0.93.0"
serde = "1.0.140"
serde_json = "1.0.82"
text-size = "1.1.0"

nil = { path = ".." }
