[package]
name = "builtin"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
phf = "0.13"

[build-dependencies]
phf_codegen = "0.13"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"

[lints]
workspace = true
