[package]
name = "ide"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
builtin = { path = "../builtin" }
either = "1.8.0"
if_chain = "1.0.2"
indexmap = "2"
itertools = "0.12.0"
la-arena = "0.3.0"
nix-interop = { path = "../nix-interop" }
once_cell = "1.17.0"
ordered-float = "4.1.0"
salsa = "0.17.0-pre.2"
smallvec = { version = "1.10.0", features = ["const_generics", "union"] }
smol_str = "0.2.0"
syntax = { path = "../syntax" }
url = "2.3.1"

[dev-dependencies]
anyhow = "1.0.60"
expect-test = "1.4.0"
