[package]
name = "ide"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
builtin = { path = "../builtin" }
either = "1.8.0"
glob = "0.3.3"
if_chain = "1.0.2"
indexmap = "2"
itertools = "0.14"
la-arena = "0.3.0"
nix-interop = { path = "../nix-interop" }
once_cell = "1.17.0"
ordered-float = "5"
salsa = "0.17.0-pre.2"
smallvec = { version = "1.10.0", features = ["const_generics", "union"] }
smol_str = "0.3"
syntax = { path = "../syntax" }
url = "2.3.1"
tracing = { version = "0.1.36", features = ["release_max_level_debug"] }

[dev-dependencies]
anyhow = "1.0.60"
expect-test = "1.4.0"

[lints]
workspace = true
