[package]
name = "nil"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.68"
argh = "0.1.10"
async-lsp = "0.0.4"
atty = "0.2.14"
codespan-reporting = "0.11.1"
ide = { path = "../ide" }
log = "0.4.17"
lsp-types = "0.94.0"
nix-interop = { path = "../nix-interop" }
serde_json = "1.0.82"
slab = "0.4.8"
ssr = { path = "../ssr" }
syntax = { path = "../syntax" }
text-size = "1.1.0"
tokio = { version = "1.27.0", features = ["io-std", "macros", "rt", "sync", "time"] }
tower = "0.4.13"
tracing = { version = "0.1.36", features = ["release_max_level_info"] }

[dependencies.tracing-subscriber]
version = "0.3.15"
default_features = false
features = [
    "env-filter",
    "fmt",
    "smallvec",
    "std",
    "tracing-log",
]

[target.'cfg(unix)'.dependencies]
rustix = { version = "0.37.17", default-features = false, features = ["fs"] }
