[package]
name = "nil"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.68"
argh = "0.1.10"
async-lsp = { version = "0.2.0", features = ["tokio"] }
codespan-reporting = "0.11.1"
ide = { path = "../ide" }
log = "0.4.17"
# The main URI type since 0.96 changed with greatly reduced interoperationality,
# see: https://github.com/gluon-lang/lsp-types/issues/284
lsp-types = "0.95.0"
macro_rules_attribute = "0.2.0"
nix-interop = { path = "../nix-interop" }
serde = "1"
serde_json = "1.0.82"
slab = "0.4.8"
ssr = { path = "../ssr" }
syntax = { path = "../syntax" }
text-size = "1.1.0"
tokio = { version = "1.27.0", features = ["io-std", "macros", "rt", "sync", "time"] }
tower = "0.4.13"
tracing = { version = "0.1.36", features = ["release_max_level_debug"] }

[dependencies.tracing-subscriber]
version = "0.3.15"
default-features = false
features = [
    "env-filter",
    "fmt",
    "smallvec",
    "std",
    "tracing-log",
]

[target.'cfg(unix)'.dependencies]
rustix = { version = "0.38.3", default-features = false, features = ["fs", "std"] }
