[package]
name = "nix-interop"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.68"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_repr = "0.1.10"
syntax = { path = "../syntax" }
tokio = { version = "1.27.0", features = ["process"] }

[dev-dependencies]
tokio = { version = "1.27.0", features = ["macros", "rt", "sync"] }
