[package]
name = "ssr"
description = "Structural search and replace"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.71"
indexmap = "2"
smol_str = "0.3"
syntax = { path = "../syntax" }

[dev-dependencies]
expect-test = "1.4.1"

[lints]
workspace = true
