[package]
name = "syntax"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
once_cell = "1.17.0"
regex-automata = "0.4.0"
rowan = "0.16"

[dev-dependencies]
criterion = "0.5.1"
expect-test = "1.4.0"
walkdir = "2.3.3"

[[bench]]
name = "parse"
harness = false

[lints]
workspace = true
